--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,18 @@
 certifi==2018.11.29
 chardet==3.0.4
 Click==7.0
+coverage==4.5.2
 Flask==1.0.2
 idna==2.7
 itsdangerous==1.1.0
 Jinja2==2.10
+linecache2==1.0.0
 MarkupSafe==1.1.0
 pkg-resources==0.0.0
 requests==2.20.1
+six==1.12.0
+testcase==0.1.0
+traceback2==1.4.0
+unittest2==1.1.0
 urllib3==1.24.1
 Werkzeug==0.14.1
